# RaspberryPi4-baremetal

./: .gitignore  CMakeLists.txt  README.md
boot/: CMakeLists.txt  boot.S  boot.h  delay.c  delay.h  gpio.c  gpio.h  kernel.cpp  link.ld  main.c  mbox.h  reboot.c  uart.cpp  uart.hpp
boot/unused/: Makefile  uart.c
cmake/: common.cmake  toolchain.cmake
libpipi/: CMakeLists.txt  c_string.c  c_string.h  common.h  cycle-cnt.h  delay.c  delay.h  dma.c  dma.h  framebuffer.c  framebuffer.h  gpio.h  mbox.c  mbox.h  printf.h  reboot.c  terminal.h  uart.c  uart.h  uartgetcode.c
nes/: CMakeLists.txt  bus.c  bus.h  controller.c  controller.h  controller_interface.c  controller_interface.h  cpu.c  cpu.h  cpu_debug.c  cpu_debug.h  cpu_exec.c  cpu_exec.h  cpu_opcodes.c  cpu_opcodes.h  cputest.h  display_interface.c  display_interface.h  main.c  nes_state.c  nes_state.h  ppu.c  ppu.h  ppu_render.c  ppu_render.h  pputest.h  rom.c  rom.h  romdata.c  sdk.c  sdk.h  snaketest.h
nes/old/: cputest.h  pputest.h
sdcard-backup/: config.txt  kernel8-bootloader.img  kernel8.img
secondary/: CMakeLists.txt  link.ld  main.c
